# haystack-core-integrations

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cliff.toml  data.json  endpoint.json  pyproject.toml  show_unreleased.sh  uv.toml
components/instructor-embedders/: README.md  pyproject.toml
components/instructor-embedders/instructor_embedders/: instructor_document_embedder.py  instructor_text_embedder.py
components/instructor-embedders/tests/: test_instructor_backend.py  test_instructor_document_embedder.py  test_instructor_embedders.py  test_instructor_text_embedder.py
integrations/ag2/: README.md  pyproject.toml
integrations/ag2/examples/: pipeline_example.py
integrations/ag2/pydoc/: config_docusaurus.yml
integrations/ag2/tests/: test_ag2_agent.py
integrations/amazon-bedrock/: pyproject.toml
integrations/amazon-bedrock/tests/: test_amazon_bedrock.py
integrations/amazon_bedrock/: CHANGELOG.md  README.md  pyproject.toml
integrations/amazon_bedrock/examples/: bedrock_ranker_example.py  chatgenerator_example.py  converse_generator_example.py  embedders_generator_with_rag_example.py  generator_with_prompt_routing.py  s3_bedrock_pipeline.py  s3_downloader.py  s3_downloader_basic.py  s3_downloader_example.py
integrations/amazon_bedrock/pydoc/: config.yml  config_docusaurus.yml
integrations/amazon_bedrock/tests/: conftest.py  test_amazon_bedrock.py  test_amazon_chat_bedrock.py  test_chat_bedrock.py  test_chat_generator.py  test_chat_generator_utils.py  test_common_utils.py  test_converse_generator.py  test_document_embedder.py  test_document_image_embedder.py  test_generator.py  test_generator_inference.py  test_ranker.py  test_s3_downloader.py  test_s3_storage.py  test_text_embedder.py  test_usage_probe.py
integrations/arcadedb/: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
integrations/arcadedb/examples/: embedding_retrieval.py
integrations/arcadedb/pydoc/: config_docusaurus.yml
integrations/arcadedb/tests/: conftest.py  test_converters.py  test_document_store.py  test_embedding_retriever.py  test_filters.py
integrations/astra/: CHANGELOG.md  README.md  pyproject.toml
integrations/astra/examples/: example.py  pipeline_example.py  requirements.txt
integrations/astra/pydoc/: config.yml  config_docusaurus.yml
integrations/astra/tests/: __init__.py  conftest.py  test_astra_client.py  test_document_store.py  test_embedding_retrieval.py  test_filters.py  test_filters_unit.py  test_retriever.py  test_retriever_async.py
integrations/azure_ai_search/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
integrations/azure_ai_search/example/: document_store.py  embedding_retrieval.py
integrations/azure_ai_search/pydoc/: config.yml  config_docusaurus.yml
integrations/azure_ai_search/tests/: conftest.py  test_bm25_retriever.py  test_document_store.py  test_embedding_retriever.py  test_filters_unit.py  test_hybrid_retriever.py
integrations/brave/: CHANGELOG.md  README.md  pyproject.toml
integrations/brave/pydoc/: config_docusaurus.yml
integrations/brave/tests/: test_brave_websearch.py
integrations/chroma/: CHANGELOG.md  README.md  chroma.md  pydoc.yml  pyproject.toml
integrations/chroma/example/: example.py
integrations/chroma/pydoc/: config.yml  config_docusaurus.yml  document_stores.yml  retrievers.yml
integrations/chroma/tests/: __init__.py  conftest.py  test_document_store.py  test_document_store_async.py  test_filters.py  test_retriever.py  test_utils.py
integrations/cognee/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
integrations/cognee/examples/: README.md  demo_memory_agent.py  demo_pipeline.py
integrations/cognee/pydoc/: config_docusaurus.yml
integrations/cognee/tests/: conftest.py  test_cognifier.py  test_integration.py  test_memory_store.py  test_retriever.py  test_utils.py  test_writer.py
integrations/cohere/: CHANGELOG.md  README.md  pyproject.toml
integrations/cohere/examples/: cohere_embedding.py  cohere_generation.py  cohere_ranker.py  cohere_ranker_in_a_pipeline.py
integrations/cohere/pydoc/: config.yml  config_docusaurus.yml
integrations/cohere/tests/: test_chat_generator.py  test_chat_generator_async.py  test_chat_generator_chunks.py  test_cohere_chat_generator.py  test_cohere_generator.py  test_cohere_generators.py  test_cohere_ranker.py  test_document_embedder.py  test_document_image_embedder.py  test_generator.py  test_ranker.py  test_text_embedder.py  test_usage_probe.py
integrations/dakera/: CHANGELOG.md  README.md  pyproject.toml
integrations/dakera/examples/: example.py
integrations/dakera/pydoc/: config_docusaurus.yml
integrations/dakera/tests/: conftest.py  test_dakera_memory_store.py  test_document_store.py  (+3 more)
integrations/deepeval/: CHANGELOG.md  README.md  pyproject.toml
integrations/fastembed/: CHANGELOG.md  README.md  pyproject.toml
integrations/github/: CHANGELOG.md  README.md  pyproject.toml
integrations/github_haystack/: pyproject.toml
integrations/google_genai/: CHANGELOG.md  LICENSE.txt  README.md  example_usage.py  pyproject.toml  test_streaming.py  test_tool_calling.py  test_toolset.py
integrations/google_vertex/: CHANGELOG.md  README.md  pyproject.toml
integrations/gradient/: LICENSE.txt  README.md  pyproject.toml
integrations/instructor_embedders/: CHANGELOG.md  pyproject.toml  requirements_lowest_direct.txt
integrations/isaacus/: CHANGELOG.md  README.md  pyproject.toml
integrations/kreuzberg/: CHANGELOG.md  README.md  kreuzberg.md  pyproject.toml
integrations/langfuse/: CHANGELOG.md  README.md  pyproject.toml
integrations/litellm/: CHANGELOG.md  README.md  litellm.md  pyproject.toml
integrations/llama_cpp/: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
integrations/llama_hub/: =0.10.0  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
integrations/llama_stack/: CHANGELOG.md  README.md  pyproject.toml
integrations/mcp/: .hatchling  CHANGELOG.md  README.md  cov.xml  pyproject.toml
integrations/meta_llama/: CHANGELOG.md  README.md  pyproject.toml
(+2874 files in other folders)
