[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-bedrock"
dynamic = ["version"]
description = 'An integration of Amazon Bedrock as an AmazonBedrockGenerator component.'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "deepset GmbH", email = "info@deepset.ai" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "boto3>=1.28.57",
]

[project.urls]
Documentation = "https://github.com/unknown/amazon-bedrock#readme"
Issues = "https://github.com/unknown/amazon-bedrock/issues"
Source = "https://github.com/unknown/amazon-bedrock"

[tool.hatch.version]
path = "src/amazon_bedrock/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/amazon_bedrock tests}"

[tool.coverage.run]
source_pkgs = ["amazon_bedrock", "tests"]
branch = true
parallel = true
omit = [
  "src/amazon_bedrock/__about__.py",
]

[tool.coverage.paths]
amazon_bedrock = ["src/amazon_bedrock", "*/amazon-bedrock/src/amazon_bedrock"]
tests = ["tests", "*/amazon-bedrock/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
